fixed the folders

--- a/elastobond.html
+++ b/elastobond.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="/css/responsive.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
     <div class="header_section">
         <div class="container-one">
             <nav class="navbar navbar-expand-lg">
-                <a class="logo" href="/index.html">
+                <a class="logo" href="index.html">
                     <h1>PHEONIX CHEMICALS</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
@@ -28,16 +28,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav mr-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/About.html">About</a>
+                            <a class="nav-link" href="About.html">About</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="/products.html">Products</a>
+                            <a class="nav-link" href="products.html">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contact.html">Contact Us</a>
+                            <a class="nav-link" href="contact.html">Contact Us</a>
                         </li>
                     </ul>
                 </div>
@@ -51,7 +51,7 @@
     <div class="section product mt-5 p-2">
         <div class="row">
             <div class="col-lg-6 col-md-12 justify-content-center">
-                <img src="/images/ElstoBond Combo.png">
+                <img src="images/ElstoBond Combo.png">
             </div>
             <div class="section-title col-lg-6 col-md-12 justify-content-center">
                 <h1 style="color: #CF0A0A; text-decoration:overline;">ElastoBond</h1>
@@ -207,7 +207,7 @@
         </div>
         <div class="row products">
             <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
-                <a href="/products/puinjectgrout.html">
+                <a href="puinjectgrout.html">
                     <div class="box" data-name="puinject">
                         <h4>PUInjectGrout</h4>
                         <p>PUInjectGrout is a low viscous, single Component, hydrophobic, MDI-based, polyurethane injection resin without catalyst.</p>
@@ -215,7 +215,7 @@
                 </a>
             </div>
             <div class="col-lg-3 align-items-stretch mt-5 col-md-6">
-                <a href="/products/putopcoat.html">
+                <a href="putopcoat.html">
                     <div class="box" data-name="putop">
                         <h4>PUTopCoat</h4>
                         <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
@@ -223,7 +223,7 @@
                 </a>
             </div>
             <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
-                <a href="/products/elastowhite.html">
+                <a href="elastowhite.html">
                     <div class="box" data-name="elastobond">
                         <h4>Elastowhite</h4>
                         <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
@@ -231,7 +231,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
-                <a href="/products/hydroseal.html">
+                <a href="hydroseal.html">
                     <div class="box" data-name="hydro">
                         <h4>HydroSeal</h4>
                         <p>A penetrating chemical with high penetrating and water repellent effect.</p>
