--- a/hydroseal.html
+++ b/hydroseal.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://kit.fontawesome.com/cb897442a3.css" crossorigin="anonymous">
@@ -19,7 +19,7 @@
     <div class="header_section">
         <div class="container-one">
             <nav class="navbar navbar-expand-lg">
-                <a class="logo" href="/index.html">
+                <a class="logo" href="index.html">
                     <h1>PHEONIX CHEMICALS</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
@@ -28,16 +28,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav mr-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/About.html">About</a>
+                            <a class="nav-link" href="About.html">About</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="/products.html">Products</a>
+                            <a class="nav-link" href="products.html">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contact.html">Contact Us</a>
+                            <a class="nav-link" href="contact.html">Contact Us</a>
                         </li>
                     </ul>
                 </div>
@@ -51,13 +51,13 @@
     <div class="section product mt-5 p-2">
         <div class="row">
             <div class="col-lg-6 col-md-12 justify-content-center">
-                <img src="/images/PUTopCoat.png">
+                <img src="images/HydroSeal.png">
             </div>
             <div class="section-title col-lg-6 col-md-12 justify-content-center">
-                <h1 style="color: #CF0A0A; text-decoration:overline;">PU TopCoat</h1>
+                <h1 style="color: #CF0A0A; text-decoration:overline;">HydroSeal</h1>
                 <p>
-                    PU TopCoat is a high performance, ready to use, cold applied, single component, elastomeric high build liquid waterproofing membrane, based on Aliphatic Polyurethane modified bitumen emulsion. PU TopCoat forms a seamless, highly elastic and durable film
-                    that adheres well to most of the common substrates e.g. concrete, cement blocks, wood, existing roof felts. PU TopCoat is highly resistant to chlorides and sulphates commonly present in the soil. It is also highly UV resistant.
+                    HydroSeal is a reactive, penetrative, water-soluble hydrophobic solution. It is a water based organic polymer with high penetrating and water repellent effect. It is developed to offer new possibilities of technical improvement. Its use allows to improve
+                    water resistance almost all kind of surface.
                 </p>
             </div>
         </div>
@@ -70,8 +70,8 @@
                 </h2>
                 <div id="IntroductionBody" class="accordion-collapse collapse show" aria-labelledby="IntroductionHead">
                     <div class="accordion-body">
-                        PU TopCoat is a high performance, ready to use, cold applied, single component, elastomeric high build liquid waterproofing membrane, based on Aliphatic Polyurethane modified bitumen emulsion. PU TopCoat forms a seamless, highly elastic and durable film
-                        that adheres well to most of the common substrates e.g. concrete, cement blocks, wood, existing roof felts. PU TopCoat is highly resistant to chlorides and sulphates commonly present in the soil. It is also highly UV resistant.
+                        HydroSeal is a reactive, penetrative, water-soluble hydrophobic solution. It is a water based organic polymer with high penetrating and water repellent effect. It is developed to offer new possibilities of technical improvement. Its use allows to improve
+                        water resistance almost all kind of surface.
                     </div>
                 </div>
             </div>
@@ -84,14 +84,12 @@
                 <div id="advantagesBody" class="accordion-collapse collapse" aria-labelledby="advantagesHead">
                     <div class="accordion-body">
                         <ul>
-                            <li><i class="fa fa-caret-right"></i>Single component and cold applied.</li>
-                            <li><i class="fa fa-caret-right"></i>PU TopCoat has excellent UV resistance and long term ageing stability.</li>
-                            <li><i class="fa fa-caret-right"></i>Cured membranes from PU TopCoat remain highly flexible even at extremes of temperatures (-25 &deg;C to 100 &deg;C).</li>
-                            <li><i class="fa fa-caret-right"></i>Excellent vapour barrier.</li>
-                            <li><i class="fa fa-caret-right"></i>Easy to use.</li>
-                            <li><i class="fa fa-caret-right"></i>Non-flammable and Non-toxic.</li>
-                            <li><i class="fa fa-caret-right"></i>Resistant to chlorides and sulphates commonly present in the soil.</li>
-                            <li><i class="fa fa-caret-right"></i>Compatible with cementitious tiling adhesive.</li>
+                            <li><i class="fa fa-caret-right"></i>Reactive, Penetrative and Long Lasting.</li>
+                            <li><i class="fa fa-caret-right"></i>Penetrates deep up to 5 to 7 mm due to very low molecule size.</li>
+                            <li><i class="fa fa-caret-right"></i>Protect substrates from deteriorating due to weathering.</li>
+                            <li><i class="fa fa-caret-right"></i>Hydrophobic agent as well as penetrating solution for concrete/cement plaster & gypsum etc.</li>
+                            <li><i class="fa fa-caret-right"></i>Excellent film formation and improves the strength of surface.</li>
+                            <li><i class="fa fa-caret-right"></i>Good alkali and water resistance and allow the surface to breathe.</li>
                         </ul>
                     </div>
                 </div>
@@ -111,39 +109,27 @@
                             </tr>
                             <tr>
                                 <td>Appearance</td>
-                                <td>Thixotropic Black Emulsion</td>
+                                <td>Milky, white and low viscous</td>
                             </tr>
                             <tr>
-                                <td>Rubber Content</td>
-                                <td>65%</td>
+                                <td>Emulsifying System</td>
+                                <td>Anionic/Non-Ionic</td>
                             </tr>
                             <tr>
-                                <td>Elongation (ASTM D412)</td>
-                                <td>900%</td>
+                                <td>Total Solids (%)</td>
+                                <td>32.0 ± 2.0</td>
                             </tr>
                             <tr>
-                                <td>Tensile Strength (ASTM D 412)</td>
-                                <td>2 Mpa</td>
+                                <td>pH at 25&deg;C</td>
+                                <td>8 to 10</td>
+                            </tr>
+                            <tr>
+                                <td>Brookfield Viscosity LVF (CPS) SP.1,6 RPM at 25&deg;C</td>
+                                <td>20</td>
                             </tr>
                             <tr>
                                 <td>Specific Gravity</td>
-                                <td>1.2</td>
-                            </tr>
-                            <tr>
-                                <td>UV & Ozone Stability</td>
-                                <td>Excellent</td>
-                            </tr>
-                            <tr>
-                                <td>Temperature Resistance </td>
-                                <td>-25&deg;C to 100&deg;C</td>
-                            </tr>
-                            <tr>
-                                <td>Touch Dry</td>
-                                <td>2 – 3 Hours</td>
-                            </tr>
-                            <tr>
-                                <td>pH Value</td>
-                                <td>>9</td>
+                                <td>1.025 ± 0.02</td>
                             </tr>
                         </table>
                     </div>
@@ -157,15 +143,7 @@
                 </h2>
                 <div id="CoverageBody" class="accordion-collapse collapse" aria-labelledby="CoverageHead">
                     <div class="accordion-body">
-                        <p>
-                            Primer: 0.25 Kg/SQM/Coat
-                        </p>
-                        <p>
-                            Base Coat: 0.5 Kg/SQM/Coat
-                        </p>
-                        <p>
-                            Top Coat: 0.5 Kg/SQM/Coat
-                        </p>
+                        Ideal consumption 120 grams to 200 gram per SQM.
                     </div>
                 </div>
             </div>
@@ -220,32 +198,32 @@
             </h1>
         </div>
         <div class="row products">
-            <div class="col-lg-3 col-md-6 align-items-stretch mt-5 flex-column">
-                <a href="/products/hydroseal.html">
-                    <div class="box" data-name="hydroseal">
-                        <h4>HydroSeal</h4>
-                        <p>A penetrating chemical with high penetrating and water repellent effect.</p>
+            <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
+                <a href="puinjectgrout.html">
+                    <div class="box" data-name="puinject">
+                        <h4>PUInjectGrout</h4>
+                        <p>PUInjectGrout is a low viscous, single Component, hydrophobic, MDI-based, polyurethane injection resin without catalyst.</p>
                     </div>
                 </a>
             </div>
             <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
-                <a href="/products/primebond.html">
-                    <div class="box" data-name="primebond">
-                        <h4>PrimeBond+</h4>
-                        <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
-                <a href="/products/elastowhite.html">
+                <a href="elastowhite.html">
                     <div class="box" data-name="elastobond">
                         <h4>Elastowhite</h4>
                         <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
                     </div>
                 </a>
             </div>
+            <div class="col-lg-3 align-items-stretch mt-5 col-md-6">
+                <a href="putopcoat.html">
+                    <div class="box" data-name="putop">
+                        <h4>PUTopCoat</h4>
+                        <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
+                    </div>
+                </a>
+            </div>
             <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
-                <a href="/products/elastobond.html">
+                <a href="elastobond.html">
                     <div class="box" data-name="bond">
                         <h4>ElastoBond</h4>
                         <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
@@ -257,6 +235,9 @@
 
     <!--Related products section ends -->
     <!--==================================================================-->
+
+
+
 
     <!--footer Section starts-->
 
