--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
             <div class="row products">
                 <div class="col-lg-3 col-md-6 align-items-stretch mt-5 flex-column">
-                    <a href="products/hydroseal.html">
+                    <a href="hydroseal.html">
                         <div class="box" data-name="hydroseal">
                             <h4>HydroSeal</h4>
                             <p>A penetrating chemical with high penetrating and water repellent effect.</p>
@@ -105,7 +105,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
-                    <a href="products/primebond.html">
+                    <a href="primebond.html">
                         <div class="box" data-name="primebond">
                             <h4>PrimeBond+</h4>
                             <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
@@ -113,7 +113,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
-                    <a href="products/putopcoat.html">
+                    <a href="putopcoat.html">
                         <div class="box" data-name="PutopCoat">
                             <h4>PUTopCoat</h4>
                             <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
@@ -121,7 +121,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
-                    <a href="products/elastobond.html">
+                    <a href="elastobond.html">
                         <div class="box" data-name="elastobond">
                             <h4>Elastowhite</h4>
                             <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
