--- a/primebond.html
+++ b/primebond.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://kit.fontawesome.com/cb897442a3.css" crossorigin="anonymous">
@@ -19,7 +19,7 @@
     <div class="header_section">
         <div class="container-one">
             <nav class="navbar navbar-expand-lg">
-                <a class="logo" href="/index.html">
+                <a class="logo" href="index.html">
                     <h1>PHEONIX CHEMICALS</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
@@ -28,16 +28,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav mr-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/About.html">About</a>
+                            <a class="nav-link" href="About.html">About</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="/products.html">Products</a>
+                            <a class="nav-link" href="products.html">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contact.html">Contact Us</a>
+                            <a class="nav-link" href="contact.html">Contact Us</a>
                         </li>
                     </ul>
                 </div>
@@ -51,13 +51,13 @@
     <div class="section product mt-5 p-2">
         <div class="row">
             <div class="col-lg-6 col-md-12 justify-content-center">
-                <img src="/images/ElastoBlack.png">
+                <img src="images/PrimeBond+.png">
             </div>
             <div class="section-title col-lg-6 col-md-12 justify-content-center">
-                <h1 style="color: #CF0A0A; text-decoration:overline;">ElastoBlack</h1>
+                <h1 style="color: #CF0A0A; text-decoration:overline;">PrimeBond+</h1>
                 <p>
-                    ElastoBlack is a highly elastic tough waterproofing system based on modified synthetic latex water based black / grey pigmented cold applied liquid membrane. ElastoBlack is highly resistant to aggressive soils and soluble salts providing an effective
-                    continuous barrier and protection against water borne damage.
+                    PrimeBond+ is specially formulated acrylic emulsion for modifying Cementitious compositions, Cement Primers, Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing. Mortar prepared with PrimeBond+ is durable and tough and ideal use for thin section
+                    application. It has excellent adhesion to various substrates like wood, concrete, brick and metal.
                 </p>
             </div>
         </div>
@@ -70,8 +70,8 @@
                 </h2>
                 <div id="IntroductionBody" class="accordion-collapse collapse show" aria-labelledby="IntroductionHead">
                     <div class="accordion-body">
-                        ElastoBlack is a highly elastic tough waterproofing system based on modified synthetic latex water based black / grey pigmented cold applied liquid membrane. ElastoBlack is highly resistant to aggressive soils and soluble salts providing an effective
-                        continuous barrier and protection against water borne damage.
+                        PrimeBond+ is specially formulated acrylic emulsion for modifying Cementitious compositions, Cement Primers, Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing. Mortar prepared with PrimeBond+ is durable and tough and ideal use for thin section
+                        application. It has excellent adhesion to various substrates like wood, concrete, brick and metal.
                     </div>
                 </div>
             </div>
@@ -84,12 +84,12 @@
                 <div id="advantagesBody" class="accordion-collapse collapse" aria-labelledby="advantagesHead">
                     <div class="accordion-body">
                         <ul>
-                            <li><i class="fa fa-caret-right"></i>Liquid application, easy to apply.</li>
-                            <li><i class="fa fa-caret-right"></i>No joints.</li>
-                            <li><i class="fa fa-caret-right"></i>High build properties to ensure rapid application.</li>
-                            <li><i class="fa fa-caret-right"></i>High elasticity, ensuring a permanently flexible barrier over a wide range of temperatures.</li>
-                            <li><i class="fa fa-caret-right"></i>Thermal stability with excellent adhesion.</li>
-                            <li><i class="fa fa-caret-right"></i>Outstanding resistance to oxidation and brittlement.</li>
+                            <li><i class="fa fa-caret-right"></i>Reactive, Penetrative and Long Lasting.</li>
+                            <li><i class="fa fa-caret-right"></i>Bonding Agent, Cementitious Waterproofing.</li>
+                            <li><i class="fa fa-caret-right"></i>Good workability at reduced water cement ratio.</li>
+                            <li><i class="fa fa-caret-right"></i>Offers good flexural and compressive built-up</li>
+                            <li><i class="fa fa-caret-right"></i>Good bonding and adhesion to substrate.</li>
+                            <li><i class="fa fa-caret-right"></i>• Excellent Water Impermeability.</li>
                         </ul>
                     </div>
                 </div>
@@ -104,49 +104,42 @@
                     <div class="accordion-body">
                         <table>
                             <tr>
-                                <th>Property</th>
-                                <th>Specification</th>
+                                <th>Properties</th>
+                                <th>Specifications</th>
                             </tr>
                             <tr>
-                                <td>Color</td>
-                                <td>Black /Grey</td>
+                                <td>Appearance</td>
+                                <td>Milky White Emulsion</td>
                             </tr>
                             <tr>
-                                <td>Form</td>
-                                <td>1 Component</td>
+                                <td>Emulsifying System</td>
+                                <td>Anionic</td>
+                            </tr>
+                            <tr>
+                                <td>Total Solids (%)</td>
+                                <td>54 ± 1</td>
+                            </tr>
+                            <tr>
+                                <td>pH at 25&deg;C</td>
+                                <td>8 to 10</td>
+                            </tr>
+                            <tr>
+                                <td>Brookfield Viscosity LVF (CPS) SP.1,6 RPM at 25&deg;C</td>
+                                <td>17</td>
                             </tr>
                             <tr>
                                 <td>Specific Gravity</td>
-                                <td>1.15</td>
+                                <td>1.025 ± 0.02</td>
                             </tr>
                             <tr>
-                                <td>Tensile Strength</td>
-                                <td>3.4N / mm2
-                                    <</td>
+                                <td>Diluatability with water</td>
+                                <td>Dilutable</td>
                             </tr>
                             <tr>
-                                <td>Elongation at Break</td>
-                                <td>>400%</td>
-                            </tr>
-                            <tr>
-                                <td>Touch Dry</td>
-                                <td>After 1 Hour</td>
-                            </tr>
-                            <tr>
-                                <td>Recoat Time</td>
-                                <td>Normally after 2 Hrs</td>
-                            </tr>
-                            <tr>
-                                <td>Cure Time</td>
-                                <td>24 Hours Approx.</td>
-                            </tr>
-                            <tr>
-                                <td>Crack Bridging</td>
-                                <td>Upto 2mm with 10 cycles</td>
-                            </tr>
-                            <tr>
-                                <td>Base</td>
-                                <td>Water based</td>
+                                <td>Compatibility</td>
+                                <td>
+                                    Compatible with Cement and Concrete mixture.
+                                </td>
                             </tr>
                         </table>
                     </div>
@@ -160,7 +153,7 @@
                 </h2>
                 <div id="CoverageBody" class="accordion-collapse collapse" aria-labelledby="CoverageHead">
                     <div class="accordion-body">
-                        Coverage depends upon the nature of the surface to be applied. But on average, smooth surface will give approx. 30 Sq Ft per kg (First Coat) & 35 Sq Ft per Kg (Second Coat). Two coats of the product will give 300 microns dft.
+                        Ideal consumption 120 grams to 200 gram per SQM.
                     </div>
                 </div>
             </div>
@@ -172,7 +165,7 @@
                 </h2>
                 <div id="StorageBody" class="accordion-collapse collapse" aria-labelledby="StorageHead">
                     <div class="accordion-body">
-                        Store between temperature of 5&deg;C and 40&deg;C. Keep containers closed when not in use.
+                        Store between temperature of 5&deg;C to 40&deg;C. Keep container closed when not in use.
                     </div>
                 </div>
             </div>
@@ -200,6 +193,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
     <!--Products details section ends-->
@@ -215,7 +209,7 @@
         </div>
         <div class="row products">
             <div class="col-lg-3 col-md-6 align-items-stretch mt-5 flex-column">
-                <a href="/products/hydroseal.html">
+                <a href="hydroseal.html">
                     <div class="box" data-name="hydroseal">
                         <h4>HydroSeal</h4>
                         <p>A penetrating chemical with high penetrating and water repellent effect.</p>
@@ -223,23 +217,23 @@
                 </a>
             </div>
             <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
-                <a href="/products/primebond.html">
-                    <div class="box" data-name="primebond">
-                        <h4>PrimeBond+</h4>
-                        <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
-                <a href="/products/elastowhite.html">
+                <a href="elastowhite.html">
                     <div class="box" data-name="elastobond">
                         <h4>Elastowhite</h4>
                         <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
                     </div>
                 </a>
             </div>
+            <div class="col-lg-3 align-items-stretch mt-5 col-md-6">
+                <a href="putopcoat.html">
+                    <div class="box" data-name="putop">
+                        <h4>PUTopCoat</h4>
+                        <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
+                    </div>
+                </a>
+            </div>
             <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
-                <a href="/products/elastobond.html">
+                <a href="elastobond.html">
                     <div class="box" data-name="bond">
                         <h4>ElastoBond</h4>
                         <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
@@ -307,6 +301,7 @@
     <!-- design section send -->
     <script src="https://kit.fontawesome.com/cb897442a3.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
