--- a/products.html
+++ b/products.html
@@ -60,7 +60,7 @@
             </div>
             <div class="row products">
                 <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
-                    <a href="products/hydroseal.html">
+                    <a href="hydroseal.html">
                         <div class="box" data-name="hydro">
                             <h4>HydroSeal</h4>
                             <p>A penetrating chemical with high penetrating and water repellent effect.</p>
@@ -68,7 +68,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-5 col-md-6">
-                    <a href="products/primebond.html">
+                    <a href="primebond.html">
                         <div class="box" data-name="prime">
                             <h4>PrimeBond+</h4>
                             <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
@@ -76,7 +76,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-5 col-md-6">
-                    <a href="products/putopcoat.html">
+                    <a href="putopcoat.html">
                         <div class="box" data-name="putop">
                             <h4>PUTopCoat</h4>
                             <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
@@ -84,7 +84,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-5 col-md-6">
-                    <a href="products/elastowhite.html">
+                    <a href="elastowhite.html">
                         <div class="box" data-name="white">
                             <h4>Elastowhite</h4>
                             <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
@@ -94,7 +94,7 @@
             </div>
             <div class="row products">
                 <div class="col-lg-3 align-items-stretch mt-5 col-md-6">
-                    <a href="products/hydroseal.html">
+                    <a href="hydroseal.html">
                         <div class="box" data-name="hydroip">
                             <h4>HydroSealP</h4>
                             <p>A penetrating chemical with high penetrating and water repellent effect.</p>
@@ -102,7 +102,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
-                    <a href="products/elastobond.html">
+                    <a href="elastobond.html">
                         <div class="box" data-name="bond">
                             <h4>ElastoBond</h4>
                             <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
@@ -110,7 +110,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
-                    <a href="products/elastoblack.html">
+                    <a href="elastoblack.html">
                         <div class="box" data-name="black">
                             <h4>ElastoBlack</h4>
                             <p>ElastoBlack is a highly elastic tough waterproofing system based on modified synthetic latex water based black / grey pigmented cold applied liquid membrane.</p>
@@ -118,7 +118,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
-                    <a href="products/puinjectgrout.html">
+                    <a href="puinjectgrout.html">
                         <div class="box" data-name="puinject">
                             <h4>PUInjectGrout</h4>
                             <p>PUInjectGrout is a low viscous, single Component, hydrophobic, MDI-based, polyurethane injection resin without catalyst.</p>
