--- a/puinjectgrout.html
+++ b/puinjectgrout.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://kit.fontawesome.com/cb897442a3.css" crossorigin="anonymous">
@@ -19,7 +19,7 @@
     <div class="header_section">
         <div class="container-one">
             <nav class="navbar navbar-expand-lg">
-                <a class="logo" href="/index.html">
+                <a class="logo" href="index.html">
                     <h1>PHEONIX CHEMICALS</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
@@ -28,16 +28,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav mr-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/About.html">About</a>
+                            <a class="nav-link" href="About.html">About</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="/products.html">Products</a>
+                            <a class="nav-link" href="products.html">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contact.html">Contact Us</a>
+                            <a class="nav-link" href="contact.html">Contact Us</a>
                         </li>
                     </ul>
                 </div>
@@ -51,13 +51,13 @@
     <div class="section product mt-5 p-2">
         <div class="row">
             <div class="col-lg-6 col-md-12 justify-content-center">
-                <img src="/images/HydroSeal.png">
+                <img src="images/PUTopCoat 1K.png">
             </div>
             <div class="section-title col-lg-6 col-md-12 justify-content-center">
-                <h1 style="color: #CF0A0A; text-decoration:overline;">HydroSeal</h1>
+                <h1 style="color: #CF0A0A; text-decoration:overline;">PUInjectGrout</h1>
                 <p>
-                    HydroSeal is a reactive, penetrative, water-soluble hydrophobic solution. It is a water based organic polymer with high penetrating and water repellent effect. It is developed to offer new possibilities of technical improvement. Its use allows to improve
-                    water resistance almost all kind of surface.
+                    PUInjectGrout is a low viscous, single Component, hydrophobic, MDI-based, polyurethane injection resin without catalyst. It only reacts with water and forms a Flexible Polyurethane Foam. This product can be injected pure directly into a leaking crack,
+                    fracture or joint. After injection has taken place, the chemical will expand and fill the void forming a tight, impermeable elastomeric seal and stops the water flow.
                 </p>
             </div>
         </div>
@@ -70,8 +70,8 @@
                 </h2>
                 <div id="IntroductionBody" class="accordion-collapse collapse show" aria-labelledby="IntroductionHead">
                     <div class="accordion-body">
-                        HydroSeal is a reactive, penetrative, water-soluble hydrophobic solution. It is a water based organic polymer with high penetrating and water repellent effect. It is developed to offer new possibilities of technical improvement. Its use allows to improve
-                        water resistance almost all kind of surface.
+                        PUInjectGrout is a low viscous, single Component, hydrophobic, MDI-based, polyurethane injection resin without catalyst. It only reacts with water and forms a Flexible Polyurethane Foam. This product can be injected pure directly into a leaking crack,
+                        fracture or joint. After injection has taken place, the chemical will expand and fill the void forming a tight, impermeable elastomeric seal and stops the water flow.
                     </div>
                 </div>
             </div>
@@ -84,12 +84,11 @@
                 <div id="advantagesBody" class="accordion-collapse collapse" aria-labelledby="advantagesHead">
                     <div class="accordion-body">
                         <ul>
-                            <li><i class="fa fa-caret-right"></i>Reactive, Penetrative and Long Lasting.</li>
-                            <li><i class="fa fa-caret-right"></i>Penetrates deep up to 5 to 7 mm due to very low molecule size.</li>
-                            <li><i class="fa fa-caret-right"></i>Protect substrates from deteriorating due to weathering.</li>
-                            <li><i class="fa fa-caret-right"></i>Hydrophobic agent as well as penetrating solution for concrete/cement plaster & gypsum etc.</li>
-                            <li><i class="fa fa-caret-right"></i>Excellent film formation and improves the strength of surface.</li>
-                            <li><i class="fa fa-caret-right"></i>Good alkali and water resistance and allow the surface to breathe.</li>
+                            <li><i class="fa fa-caret-right"></i>1-component. No catalyst required.</li>
+                            <li><i class="fa fa-caret-right"></i>Immediate increase of viscosity is ideal for active leaks.</li>
+                            <li><i class="fa fa-caret-right"></i>Can be injected as 1-component.</li>
+                            <li><i class="fa fa-caret-right"></i>Highly flexible foam is ideally suited for dynamic cracks and joint where a high degree of settlement and movement can occur.</li>
+                            <li><i class="fa fa-caret-right"></i>Cured foam is chemically inert, non-toxic and safe for the environment.</li>
                         </ul>
                     </div>
                 </div>
@@ -102,36 +101,11 @@
                 </h2>
                 <div id="SpecificationsBody" class="accordion-collapse collapse" aria-labelledby="SpecificationsHead">
                     <div class="accordion-body">
-                        <table>
-                            <tr>
-                                <th>Properties</th>
-                                <th>Specifications</th>
-                            </tr>
-                            <tr>
-                                <td>Appearance</td>
-                                <td>Milky, white and low viscous</td>
-                            </tr>
-                            <tr>
-                                <td>Emulsifying System</td>
-                                <td>Anionic/Non-Ionic</td>
-                            </tr>
-                            <tr>
-                                <td>Total Solids (%)</td>
-                                <td>32.0 ± 2.0</td>
-                            </tr>
-                            <tr>
-                                <td>pH at 25&deg;C</td>
-                                <td>8 to 10</td>
-                            </tr>
-                            <tr>
-                                <td>Brookfield Viscosity LVF (CPS) SP.1,6 RPM at 25&deg;C</td>
-                                <td>20</td>
-                            </tr>
-                            <tr>
-                                <td>Specific Gravity</td>
-                                <td>1.025 ± 0.02</td>
-                            </tr>
-                        </table>
+                        <ul>
+                            <li><i class="fa fa-caret-right"></i><strong>Color : </strong>Yellow – Brown</li>
+                            <li><i class="fa fa-caret-right"></i><strong>Density : </strong>1,10 – 1,12 kg/dm3 </li>
+                            <li><i class="fa fa-caret-right"></i><strong>Viscosity : </strong>23&deg;C:250 – 300 mPa.s</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -143,7 +117,7 @@
                 </h2>
                 <div id="CoverageBody" class="accordion-collapse collapse" aria-labelledby="CoverageHead">
                     <div class="accordion-body">
-                        Ideal consumption 120 grams to 200 gram per SQM.
+                        Coverage depends upon the nature of the surface to be applied. But on average, smooth surface will give approx. 30 Sq Ft per kg (First Coat) & 35 Sq Ft per Kg (Second Coat). Two coats of the product will give 300 microns dft.
                     </div>
                 </div>
             </div>
@@ -155,7 +129,7 @@
                 </h2>
                 <div id="StorageBody" class="accordion-collapse collapse" aria-labelledby="StorageHead">
                     <div class="accordion-body">
-                        Store between temperature of 5&deg;C to 40&deg;C. Keep container closed when not in use.
+                        Storage in area with temperature between 10&deg;C and 30&deg;C.
                     </div>
                 </div>
             </div>
@@ -179,16 +153,14 @@
                 </h2>
                 <div id="PackagingBody" class="accordion-collapse collapse" aria-labelledby="PackagingHead">
                     <div class="accordion-body">
-                        25 Kg Carboys / drum
+                        PUInjectGrout is supplied in a packing of 10Kgs.
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
     <!--Products details section ends-->
     <!--======================================================================-->
-
     <!--Related products section starts-->
 
     <div class="section mt-5 p-2">
@@ -198,32 +170,32 @@
             </h1>
         </div>
         <div class="row products">
-            <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
-                <a href="/products/puinjectgrout.html">
-                    <div class="box" data-name="puinject">
-                        <h4>PUInjectGrout</h4>
-                        <p>PUInjectGrout is a low viscous, single Component, hydrophobic, MDI-based, polyurethane injection resin without catalyst.</p>
+            <div class="col-lg-3 col-md-6 align-items-stretch mt-5 flex-column">
+                <a href="hydroseal.html">
+                    <div class="box" data-name="hydroseal">
+                        <h4>HydroSeal</h4>
+                        <p>A penetrating chemical with high penetrating and water repellent effect.</p>
                     </div>
                 </a>
             </div>
             <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
-                <a href="/products/elastowhite.html">
+                <a href="primebond.html">
+                    <div class="box" data-name="primebond">
+                        <h4>PrimeBond+</h4>
+                        <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
+                <a href="elastowhite.html">
                     <div class="box" data-name="elastobond">
                         <h4>Elastowhite</h4>
                         <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
                     </div>
                 </a>
             </div>
-            <div class="col-lg-3 align-items-stretch mt-5 col-md-6">
-                <a href="/products/putopcoat.html">
-                    <div class="box" data-name="putop">
-                        <h4>PUTopCoat</h4>
-                        <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
-                    </div>
-                </a>
-            </div>
             <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
-                <a href="/products/elastobond.html">
+                <a href="elastobond.html">
                     <div class="box" data-name="bond">
                         <h4>ElastoBond</h4>
                         <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
@@ -235,8 +207,6 @@
 
     <!--Related products section ends -->
     <!--==================================================================-->
-
-
 
 
     <!--footer Section starts-->
