--- a/putopcoat.html
+++ b/putopcoat.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://kit.fontawesome.com/cb897442a3.css" crossorigin="anonymous">
@@ -19,7 +19,7 @@
     <div class="header_section">
         <div class="container-one">
             <nav class="navbar navbar-expand-lg">
-                <a class="logo" href="/index.html">
+                <a class="logo" href="index.html">
                     <h1>PHEONIX CHEMICALS</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
@@ -28,16 +28,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav mr-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/About.html">About</a>
+                            <a class="nav-link" href="About.html">About</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="/products.html">Products</a>
+                            <a class="nav-link" href="products.html">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contact.html">Contact Us</a>
+                            <a class="nav-link" href="contact.html">Contact Us</a>
                         </li>
                     </ul>
                 </div>
@@ -51,13 +51,13 @@
     <div class="section product mt-5 p-2">
         <div class="row">
             <div class="col-lg-6 col-md-12 justify-content-center">
-                <img src="/images/PUTopCoat 1K.png">
+                <img src="images/PUTopCoat.png">
             </div>
             <div class="section-title col-lg-6 col-md-12 justify-content-center">
-                <h1 style="color: #CF0A0A; text-decoration:overline;">PUInjectGrout</h1>
+                <h1 style="color: #CF0A0A; text-decoration:overline;">PU TopCoat</h1>
                 <p>
-                    PUInjectGrout is a low viscous, single Component, hydrophobic, MDI-based, polyurethane injection resin without catalyst. It only reacts with water and forms a Flexible Polyurethane Foam. This product can be injected pure directly into a leaking crack,
-                    fracture or joint. After injection has taken place, the chemical will expand and fill the void forming a tight, impermeable elastomeric seal and stops the water flow.
+                    PU TopCoat is a high performance, ready to use, cold applied, single component, elastomeric high build liquid waterproofing membrane, based on Aliphatic Polyurethane modified bitumen emulsion. PU TopCoat forms a seamless, highly elastic and durable film
+                    that adheres well to most of the common substrates e.g. concrete, cement blocks, wood, existing roof felts. PU TopCoat is highly resistant to chlorides and sulphates commonly present in the soil. It is also highly UV resistant.
                 </p>
             </div>
         </div>
@@ -70,8 +70,8 @@
                 </h2>
                 <div id="IntroductionBody" class="accordion-collapse collapse show" aria-labelledby="IntroductionHead">
                     <div class="accordion-body">
-                        PUInjectGrout is a low viscous, single Component, hydrophobic, MDI-based, polyurethane injection resin without catalyst. It only reacts with water and forms a Flexible Polyurethane Foam. This product can be injected pure directly into a leaking crack,
-                        fracture or joint. After injection has taken place, the chemical will expand and fill the void forming a tight, impermeable elastomeric seal and stops the water flow.
+                        PU TopCoat is a high performance, ready to use, cold applied, single component, elastomeric high build liquid waterproofing membrane, based on Aliphatic Polyurethane modified bitumen emulsion. PU TopCoat forms a seamless, highly elastic and durable film
+                        that adheres well to most of the common substrates e.g. concrete, cement blocks, wood, existing roof felts. PU TopCoat is highly resistant to chlorides and sulphates commonly present in the soil. It is also highly UV resistant.
                     </div>
                 </div>
             </div>
@@ -84,11 +84,14 @@
                 <div id="advantagesBody" class="accordion-collapse collapse" aria-labelledby="advantagesHead">
                     <div class="accordion-body">
                         <ul>
-                            <li><i class="fa fa-caret-right"></i>1-component. No catalyst required.</li>
-                            <li><i class="fa fa-caret-right"></i>Immediate increase of viscosity is ideal for active leaks.</li>
-                            <li><i class="fa fa-caret-right"></i>Can be injected as 1-component.</li>
-                            <li><i class="fa fa-caret-right"></i>Highly flexible foam is ideally suited for dynamic cracks and joint where a high degree of settlement and movement can occur.</li>
-                            <li><i class="fa fa-caret-right"></i>Cured foam is chemically inert, non-toxic and safe for the environment.</li>
+                            <li><i class="fa fa-caret-right"></i>Single component and cold applied.</li>
+                            <li><i class="fa fa-caret-right"></i>PU TopCoat has excellent UV resistance and long term ageing stability.</li>
+                            <li><i class="fa fa-caret-right"></i>Cured membranes from PU TopCoat remain highly flexible even at extremes of temperatures (-25 &deg;C to 100 &deg;C).</li>
+                            <li><i class="fa fa-caret-right"></i>Excellent vapour barrier.</li>
+                            <li><i class="fa fa-caret-right"></i>Easy to use.</li>
+                            <li><i class="fa fa-caret-right"></i>Non-flammable and Non-toxic.</li>
+                            <li><i class="fa fa-caret-right"></i>Resistant to chlorides and sulphates commonly present in the soil.</li>
+                            <li><i class="fa fa-caret-right"></i>Compatible with cementitious tiling adhesive.</li>
                         </ul>
                     </div>
                 </div>
@@ -101,11 +104,48 @@
                 </h2>
                 <div id="SpecificationsBody" class="accordion-collapse collapse" aria-labelledby="SpecificationsHead">
                     <div class="accordion-body">
-                        <ul>
-                            <li><i class="fa fa-caret-right"></i><strong>Color : </strong>Yellow – Brown</li>
-                            <li><i class="fa fa-caret-right"></i><strong>Density : </strong>1,10 – 1,12 kg/dm3 </li>
-                            <li><i class="fa fa-caret-right"></i><strong>Viscosity : </strong>23&deg;C:250 – 300 mPa.s</li>
-                        </ul>
+                        <table>
+                            <tr>
+                                <th>Properties</th>
+                                <th>Specifications</th>
+                            </tr>
+                            <tr>
+                                <td>Appearance</td>
+                                <td>Thixotropic Black Emulsion</td>
+                            </tr>
+                            <tr>
+                                <td>Rubber Content</td>
+                                <td>65%</td>
+                            </tr>
+                            <tr>
+                                <td>Elongation (ASTM D412)</td>
+                                <td>900%</td>
+                            </tr>
+                            <tr>
+                                <td>Tensile Strength (ASTM D 412)</td>
+                                <td>2 Mpa</td>
+                            </tr>
+                            <tr>
+                                <td>Specific Gravity</td>
+                                <td>1.2</td>
+                            </tr>
+                            <tr>
+                                <td>UV & Ozone Stability</td>
+                                <td>Excellent</td>
+                            </tr>
+                            <tr>
+                                <td>Temperature Resistance </td>
+                                <td>-25&deg;C to 100&deg;C</td>
+                            </tr>
+                            <tr>
+                                <td>Touch Dry</td>
+                                <td>2 – 3 Hours</td>
+                            </tr>
+                            <tr>
+                                <td>pH Value</td>
+                                <td>>9</td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
             </div>
@@ -117,7 +157,15 @@
                 </h2>
                 <div id="CoverageBody" class="accordion-collapse collapse" aria-labelledby="CoverageHead">
                     <div class="accordion-body">
-                        Coverage depends upon the nature of the surface to be applied. But on average, smooth surface will give approx. 30 Sq Ft per kg (First Coat) & 35 Sq Ft per Kg (Second Coat). Two coats of the product will give 300 microns dft.
+                        <p>
+                            Primer: 0.25 Kg/SQM/Coat
+                        </p>
+                        <p>
+                            Base Coat: 0.5 Kg/SQM/Coat
+                        </p>
+                        <p>
+                            Top Coat: 0.5 Kg/SQM/Coat
+                        </p>
                     </div>
                 </div>
             </div>
@@ -129,7 +177,7 @@
                 </h2>
                 <div id="StorageBody" class="accordion-collapse collapse" aria-labelledby="StorageHead">
                     <div class="accordion-body">
-                        Storage in area with temperature between 10&deg;C and 30&deg;C.
+                        Store between temperature of 5&deg;C to 40&deg;C. Keep container closed when not in use.
                     </div>
                 </div>
             </div>
@@ -153,14 +201,16 @@
                 </h2>
                 <div id="PackagingBody" class="accordion-collapse collapse" aria-labelledby="PackagingHead">
                     <div class="accordion-body">
-                        PUInjectGrout is supplied in a packing of 10Kgs.
+                        25 Kg Carboys / drum
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
     <!--Products details section ends-->
     <!--======================================================================-->
+
     <!--Related products section starts-->
 
     <div class="section mt-5 p-2">
@@ -171,7 +221,7 @@
         </div>
         <div class="row products">
             <div class="col-lg-3 col-md-6 align-items-stretch mt-5 flex-column">
-                <a href="/products/hydroseal.html">
+                <a href="hydroseal.html">
                     <div class="box" data-name="hydroseal">
                         <h4>HydroSeal</h4>
                         <p>A penetrating chemical with high penetrating and water repellent effect.</p>
@@ -179,7 +229,7 @@
                 </a>
             </div>
             <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
-                <a href="/products/primebond.html">
+                <a href="primebond.html">
                     <div class="box" data-name="primebond">
                         <h4>PrimeBond+</h4>
                         <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
@@ -187,7 +237,7 @@
                 </a>
             </div>
             <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
-                <a href="/products/elastowhite.html">
+                <a href="elastowhite.html">
                     <div class="box" data-name="elastobond">
                         <h4>Elastowhite</h4>
                         <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
@@ -195,7 +245,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
-                <a href="/products/elastobond.html">
+                <a href="elastobond.html">
                     <div class="box" data-name="bond">
                         <h4>ElastoBond</h4>
                         <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
@@ -207,7 +257,6 @@
 
     <!--Related products section ends -->
     <!--==================================================================-->
-
 
     <!--footer Section starts-->
 
